welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: type int
	var d : int = 0
                ^