welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var d : int = 0
	if (a<20 && a>12) {d = d+1} else {
		if (b<20 && b>12) {d = d+1} else {
			if (c<20 && c>12) {d = d+1} else {
				if (d<20 && d>12) {d = d+1} 
			}
		}
	}
	d
}
